using UnityEngine;

internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string jumpTrigger = "jump";
    internal static string attackTrigger= "attack";
}
